<resources>
    <string name="app_name" translatable="false">GPS Tracker</string>
    <string name="tab_gpsfix">GPS Fix</string>
    <string name="tab_track">Track</string>
    <string name="tab_tracklist">Tracklist</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="direction">Direction</string>
    <string name="accuracy">Accuracy</string>
    <string name="time">Time</string>
    <string name="satellites">Satellites</string>
    <string name="north">N</string>
    <string name="north_northeast">NNE</string>
    <string name="northeast">NE</string>
    <string name="east_northeast">ENE</string>
    <string name="east">E</string>
    <string name="east_southeast">ESE</string>
    <string name="southeast">SE</string>
    <string name="south_southeast">SSE</string>
    <string name="south">S</string>
    <string name="south_southwest">SSW</string>
    <string name="southwest">SW</string>
    <string name="west_southwest">WSW</string>
    <string name="west">W</string>
    <string name="west_northwest">WNW</string>
    <string name="northwest">NW</string>
    <string name="north_northwest">NNW</string>
    <string name="gps_disabled">GPS disabled</string>
    <string name="gps_disabled_with_hint">GPS disabled\n\nDouble clicking here\nyou can enable the Location Service\nand set a Locating Method\nthat uses the GPS sensor</string>
    <string name="gps_out_of_service">GPS out of service</string>
    <string name="gps_temporary_unavailable">GPS temporary unavailable</string>
    <string name="gps_searching">Looking for GPS</string>
    <string name="gps_stabilizing">Stabilizing signal</string>
    <string name="track_id">Track</string>
    <string name="duration">Duration</string>
    <string name="max_speed">Max Speed</string>
    <string name="average_speed">Avg Speed</string>
    <string name="distance">Distance</string>
    <string name="overall_direction">Overall Dir</string>
    <string name="altitude_gap">Altitude Gap</string>
    <string name="track_empty">New Track\n\nStart recording Trackpoints\nor add a Placemark\nusing one of the buttons below</string>
    <string name="placemarks">Placemarks</string>
    <string name="trackpoints">Trackpoints</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_track_finished">Track finalized</string>
    <string name="toast_track_finished_click_again">Double click to finalize this track</string>
    <string name="toast_track_saved_into_tracklist">Track saved into the Tracklist</string>
    <string name="toast_track_exported">Tracks exported in /GPSLogger folder</string>
    <string name="menu_about">About</string>
    <string name="menu_shutdown">Shutdown</string>
    <string name="dlg_add_placemark">Add Placemark</string>
    <string name="dlg_placemark_description">Enter the description</string>
    <string name="dlg_button_add">Add</string>
    <string name="dlg_button_cancel">Cancel</string>
    <string name="tracklist_empty">Tracklist Empty</string>
    <string name="card_trackinfo_length">Length</string>
    <string name="card_trackinfo_duration">Duration</string>
    <string name="card_trackinfo_altitude_gap">Alt gap</string>
    <string name="card_trackinfo_max_speed">Max spd</string>
    <string name="card_trackinfo_average_speed">Avg spd</string>
    <string name="card_trackinfo_geopoints">Points</string>
    <string name="card_trackinfo_placemarks">Places</string>
    <string name="card_menu_export">Export</string>
    <string name="card_menu_view_selector">View in ...</string>
    <string name="card_menu_view">View in %1$s</string>
    <string name="card_menu_delete">Delete</string>
    <string name="card_menu_share">Share with ...</string>
    <string name="card_message_delete_also_exported">Do you also want to delete all exported files of the selected tracks?</string>
    <string name="card_message_delete_confirmation">Do you really want to delete the selected tracks?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="export_unable_to_write_file">Unable to write the file</string>
    <string name="please_grant_storage_permission">Please grant the Storage Permission to enable this Feature</string>
    <string name="dlg_app_killed">The App has been killed during background recording.</string>
    <string name="dlg_app_killed_description">Please check in Android Settings that the app is not Battery optimized and not even Background restricted.</string>
    <string name="open_android_app_settings">Open Settings</string>
    <string name="pref_category_interface">INTERFACE</string>
    <string name="pref_keep_screen_on">Keep Screen On</string>
    <string name="pref_keep_screen_on_summary">Battery drains faster</string>
    <string name="pref_color_theme">Color Theme</string>
    <string name="pref_color_theme_dark">Dark</string>
    <string name="pref_color_theme_light">Light</string>
    <string name="pref_show_decimal_coordinates">Show Decimal Coordinates</string>
    <string name="pref_show_decimal_coordinates_summary">Fractional part in decimal notation</string>
    <string name="pref_show_directions">Show Directions using</string>
    <string name="pref_show_directions_angle">Degrees East of North</string>
    <string name="pref_show_directions_cardinal">Cardinal Points</string>
    <string name="pref_unit_of_measurement">System of Measurement</string>
    <string name="pref_unit_of_measurement_metric">Metric</string>
    <string name="pref_unit_of_measurement_imperial">Imperial</string>
    <string name="pref_unit_of_measurement_aerial_nautical">Aerial / Nautical</string>
    <string name="pref_unit_of_measurement_speed">Show Speeds in</string>
    <string name="pref_view_tracks_with">View Tracks with</string>
    <string name="pref_view_tracks_with_KML">KML viewer</string>
    <string name="pref_view_tracks_with_GPX">GPX viewer</string>
    <string name="pref_category_tracking">TRACKING</string>
    <string name="pref_GPS_distance">Collecting Density</string>
    <string name="pref_GPS_distance_max">Maximum</string>
    <string name="pref_GPS_distance_1m">1 meter</string>
    <string name="pref_GPS_distance_2m">2 meters</string>
    <string name="pref_GPS_distance_5m">5 meters</string>
    <string name="pref_GPS_distance_10m">10 meters</string>
    <string name="pref_GPS_distance_20m">20 meters</string>
    <string name="pref_GPS_distance_3ft">3 feet</string>
    <string name="pref_GPS_distance_6ft">6 feet</string>
    <string name="pref_GPS_distance_16ft">16 feet</string>
    <string name="pref_GPS_distance_33ft">33 feet</string>
    <string name="pref_GPS_distance_66ft">66 feet</string>
    <string name="pref_GPS_update_frequency">GPS Update Interval</string>
    <string name="pref_GPS_update_frequency_max">The shortest available</string>
    <string name="pref_GPS_update_frequency_1s">1 second (best accuracy)</string>
    <string name="pref_GPS_update_frequency_2s">2 seconds</string>
    <string name="pref_GPS_update_frequency_3s">3 seconds (less accurate)</string>
    <string name="pref_category_altitude_corrections">ALTITUDE CORRECTIONS</string>
    <string name="pref_EGM96AltitudeCorrection">EGM96 Correction</string>
    <string name="pref_EGM96AltitudeCorrection_summary">Automatic altitude correction, based on NGA Earth Geoid Model</string>
    <string name="pref_EGM96AltitudeCorrection_download_progress">Downloading 2028kB file:\nEGM96 Geoid Heights..</string>
    <string name="pref_AltitudeCorrection">Manual Correction</string>
    <string name="pref_AltitudeCorrection_summary_offset">Offset</string>
    <string name="pref_AltitudeCorrection_summary_not_defined">No offset defined</string>
    <string name="pref_category_exporting">EXPORTATION</string>
    <string name="pref_export_TXT">Export Tracks in TXT</string>
    <string name="pref_export_TXT_summary">Plain text, comma-separated values</string>
    <string name="pref_TXT_system_of_measurement">TXT Units of measurement</string>
    <string name="pref_TXT_system_of_measurement_follows_app_settings">Follow interface settings</string>
    <string name="pref_export_KML">Export Tracks in KML</string>
    <string name="pref_export_KML_summary">Keyhole Markup Language (v.2.2)</string>
    <string name="pref_export_GPX">Export Tracks in GPX</string>
    <string name="pref_export_GPX_summary">Standard GPS eXchange Format</string>
    <string name="pref_GPX_version">Version of GPX Standard</string>
    <string name="pref_GPX_version_1_0">GPX 1.0</string>
    <string name="pref_GPX_version_1_1">GPX 1.1</string>
    <string name="pref_KML_altitude_mode">KML Altitude mode</string>
    <string name="pref_KML_altitude_mode_absolute">Absolute</string>
    <string name="pref_KML_altitude_mode_projected">Projected to Ground</string>
    <string name="pref_track_stats">Track Stats based on</string>
    <string name="pref_track_stats_totaltime">Total time</string>
    <string name="pref_track_stats_movingtime">Moving time</string>
    <string name="toast_download_error">Download error</string>
    <string name="toast_download_completed">Download completed</string>
    <string name="toast_download_failed">Download failed. Try again later</string>
    <string name="toast_active_track_not_empty">The active track is not empty</string>
    <string name="about_version">ver.</string>
    <string name="about_description">Copyright (C) 2016 BasicAirData\nhttp://www.basicairdata.eu\n\nBasicAirData GPS Logger records your tracks using GPS. You can view them in your preferred viewer, share, and export them in GPSLogger folder of your device in KML, GPX, and TXT format.\n\nThis program is free software, released under the terms of the GNU General Public License.\nFor more details see: http://www.gnu.org/licenses/gpl.txt\n\nFor EGM96 geoid file disclaimer see: http://earth-info.nga.mil/GandG/disclaim.html</string>
    <string name="about_description_googleplaystore">Copyright (C) 2016 BasicAirData\nhttp://www.basicairdata.eu\n\nBasicAirData GPS Logger records your tracks using GPS. You can view them in your preferred viewer, share, and export them in GPSLogger folder of your device in KML, GPX, and TXT format.\n\nThis program is free software, released under the terms of the GNU General Public License.\nFor more details see: http://www.gnu.org/licenses/gpl.txt\n\nFor EGM96 geoid file disclaimer see: http://earth-info.nga.mil/GandG/disclaim.html\n\nIf You enjoy using this app, please take a moment to rate GPS Logger in the Google Store.</string>
    <string name="about_ok">Close</string>
    <string name="about_rate_this_app">Rate this App</string>
    <string name="about_unable_to_rate">Unable to reach the Store</string>
    <string name="notification_contenttext">is active</string>
    <string name="message_exit_finalizing">You are closing the app.\nDo you want to finalize the current track now?</string>
    <string name="UM_m">m</string>
    <string name="UM_km">km</string>
    <string name="UM_m_s">m/s</string>
    <string name="UM_km_h">km/h</string>
    <string name="UM_ft">ft</string>
    <string name="UM_mi">mi</string>
    <string name="UM_fps">fps</string>
    <string name="UM_mph">mph</string>
    <string name="UM_nm">NM</string>
    <string name="UM_kn">kn</string>
</resources>