<?xml version="1.0" encoding="utf-8"?>



<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.basicairdata.graziano.gpslogger.GPSActivity">
    <item
        android:id="@+id/cardmenu_view"
        android:icon="@mipmap/ic_visibility_white_24dp"
        android:visible="true"
        android:title="@string/card_menu_view_selector" />
    <item
        android:id="@+id/cardmenu_share"
        android:icon="@mipmap/ic_share_white_24dp"
        android:visible="true"
        android:title="@string/card_menu_share" />
    <item
        android:id="@+id/cardmenu_export"
        android:icon="@mipmap/ic_publish_white_24dp"
        android:visible="true"
        android:title="@string/card_menu_export" />
    <item
        android:id="@+id/cardmenu_delete"
        android:icon="@mipmap/ic_delete_white_24dp"
        android:visible="true"
        android:title="@string/card_menu_delete" />
</menu>