<?xml version="1.0" encoding="utf-8"?>



<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_main_menu"
    tools:context="eu.basicairdata.graziano.gpslogger.GPSActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="101"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_shutdown"
        android:orderInCategory="102"
        android:title="@string/menu_shutdown"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_track_finished"
        android:visible="false"
        android:orderInCategory="105"
        android:icon="@mipmap/ic_done_white_24dp"
        android:title="@string/menu_track_finished"
        app:showAsAction="ifRoom" />
</menu>
