<?xml version="1.0" encoding="utf-8"?>



<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_fragmenttrackFrameLayout"
    tools:context=".FragmentTrack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:id="@+id/id_fragmenttrack"
    android:paddingTop="6dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="top|center"
    android:orientation="vertical"
    android:baselineAligned="false">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/id_tableLayout_TrackName"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:layout_margin="3dp"
        android:background="@drawable/rounded_corner">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearanceLargeNumbers"
            android:id="@+id/id_textView_TrackName"
            android:freezesText="true"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold"
            android:gravity="center_horizontal" />

        <TextView
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/id_textView_TrackIDLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:gravity="center_horizontal" />
    </TableLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false" >

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tableLayout_Duration"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:background="@drawable/rounded_corner"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:baselineAligned="false">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearanceLargeNumbers"
                android:id="@+id/id_textView_Duration"
                android:freezesText="true"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/duration"
                android:id="@+id/id_textView_DurationLabel"
                android:textSize="13sp"
                android:gravity="center_horizontal" />
        </TableLayout>

        <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/id_tableLayout_Distance"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:layout_margin="3dp"
                android:background="@drawable/rounded_corner"
            android:layout_weight="1">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearanceLargeNumbers"
                        android:id="@+id/id_textView_Distance"
                        android:freezesText="true"
                        android:textStyle="bold"
                        android:gravity="center_horizontal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearanceLargeUM"
                        android:id="@+id/id_textView_DistanceUM"
                        android:layout_weight="0"
                        android:layout_marginLeft="7dp"
                        android:layout_marginStart="7dp" />
                </TableRow>

                <TextView
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/distance"
                    android:id="@+id/id_textView_DistanceLabel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:gravity="center_horizontal" />
            </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tableLayout_SpeedMax"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_corner"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_weight="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeNumbers"
                    android:id="@+id/id_textView_SpeedMax"
                    android:freezesText="true"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeUM"
                    android:id="@+id/id_textView_SpeedMaxUM"
                    android:layout_weight="0"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp" />
            </TableRow>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/max_speed"
                android:id="@+id/id_textView_SpeedMaxLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center_horizontal" />
        </TableLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tableLayout_AltitudeGap"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_corner"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_weight="1">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeNumbers"
                    android:id="@+id/id_textView_AltitudeGap"
                    android:freezesText="true"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeUM"
                    android:id="@+id/id_textView_AltitudeGapUM"
                    android:layout_weight="0"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp" />
            </TableRow>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/altitude_gap"
                android:id="@+id/id_textView_AltitudeGapLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center_horizontal" />
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:baselineAligned="false" >

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tableLayout_SpeedAvg"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_corner"
            android:layout_weight="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeNumbers"
                    android:id="@+id/id_textView_SpeedAvg"
                    android:freezesText="true"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeUM"
                    android:id="@+id/id_textView_SpeedAvgUM"
                    android:layout_weight="0"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp" />
            </TableRow>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/average_speed"
                android:id="@+id/id_textView_SpeedAvgLabel"
                android:textSize="13sp"
                android:gravity="center_horizontal" />
        </TableLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/id_tableLayout_OverallDirection"
            android:layout_margin="3dp"
            android:background="@drawable/rounded_corner"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:layout_weight="1" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeNumbers"
                    android:id="@+id/id_textView_OverallDirection"
                    android:freezesText="true"
                    android:textStyle="bold"
                    android:gravity="center_horizontal" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearanceLargeUM"
                    android:id="@+id/id_textView_OverallDirectionUM"
                    android:layout_weight="0"
                    android:layout_marginLeft="7dp"
                    android:layout_marginStart="7dp" />
            </TableRow>

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/overall_direction"
                android:id="@+id/id_textView_OverallDirectionLabel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="13sp"
                android:gravity="center_horizontal" />
        </TableLayout>
    </LinearLayout>

</LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/id_textView_TrackStatus"
        android:paddingTop="30dp"
        android:text="@string/track_empty"
        android:gravity="center_horizontal" />

</FrameLayout>